--- a/homepage.css
+++ b/homepage.css
@@ -1,5 +1,13 @@
 body h1 {
     text-align: center;
     background-color: #9900ff;
-    padding: 15px;   
+    padding: 15px;  
+    margin-top: -10px; 
+    margin-left: -10px;
+    margin-right: -10px;
+    font-size: 50px;
+}
+
+.button {
+    background-color: #c0c0c0;
 }
